[ADD] half attendace log, all emplyoee details show edit delete

--- a/src/Components/Home.scss
+++ b/src/Components/Home.scss
@@ -1,7 +1,7 @@
 .employeeBox{   
     border-radius: 10px;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
-    padding: 10px;
+    padding: 10px 5px;
     align-items: center;
 
     & p{
